@@ -1,6 +1,7 @@
 2009-02-25 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Change struct gc_sentence into class Sentence.
+	* Change struct gc_paragraph into class Paragraph.
 
 2009-02-21 Harri Pitkänen <hatapitk@iki.fi>
 
